스케줄 페이지랑 서치페이지
스케줄 페이지랑 서치페이지 작동 완료